--- a/SDLRoguelike.cbp
+++ b/SDLRoguelike.cbp
@@ -26,13 +26,19 @@
 			<Target title="Release">
 				<Option output="bin/Release/SDLRoguelike" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
-				<Option type="0" />
+				<Option type="1" />
 				<Option compiler="gcc" />
+				<Option use_console_runner="0" />
 				<Compiler>
 					<Add option="-O2" />
+					<Add directory="C:/SDL2-2.0.14/x86_64-w64-mingw32/include/SDL2" />
+					<Add directory="C:/SDL2_image-2.0.5/x86_64-w64-mingw32/include/SDL2" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
+					<Add option="-lmingw32 -lSDL2main -lSDL2 -lSDL2_image" />
+					<Add directory="C:/SDL2-2.0.14/x86_64-w64-mingw32/lib" />
+					<Add directory="C:/SDL2_image-2.0.5/x86_64-w64-mingw32/lib" />
 				</Linker>
 			</Target>
 		</Build>
@@ -40,6 +46,7 @@
 			<Add option="-Wall" />
 			<Add directory="C:/SDL2-2.0.14/x86_64-w64-mingw32/include/SDL2" />
 			<Add directory="C:/SDL2_image-2.0.5/x86_64-w64-mingw32/include/SDL2" />
+			<Add directory="C:/SDLRoguelike/SDLRoguelike/include" />
 		</Compiler>
 		<Linker>
 			<Add option="-lmingw32 -lSDL2main -lSDL2 -lSDL2_image" />
