--- a/Debug.cbp
+++ b/Debug.cbp
@@ -2,7 +2,7 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="SDLRoguelike" />
+		<Option title="Debug" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
@@ -18,24 +18,6 @@
 					<Add directory="C:/SDL2_image-2.0.5/x86_64-w64-mingw32/include/SDL2" />
 				</Compiler>
 				<Linker>
-					<Add option="-lmingw32 -lSDL2main -lSDL2 -lSDL2_image" />
-					<Add directory="C:/SDL2-2.0.14/x86_64-w64-mingw32/lib" />
-					<Add directory="C:/SDL2_image-2.0.5/x86_64-w64-mingw32/lib" />
-				</Linker>
-			</Target>
-			<Target title="Release">
-				<Option output="bin/Release/SDLRoguelike" prefix_auto="1" extension_auto="1" />
-				<Option object_output="obj/Release/" />
-				<Option type="1" />
-				<Option compiler="gcc" />
-				<Option use_console_runner="0" />
-				<Compiler>
-					<Add option="-O2" />
-					<Add directory="C:/SDL2-2.0.14/x86_64-w64-mingw32/include/SDL2" />
-					<Add directory="C:/SDL2_image-2.0.5/x86_64-w64-mingw32/include/SDL2" />
-				</Compiler>
-				<Linker>
-					<Add option="-s" />
 					<Add option="-lmingw32 -lSDL2main -lSDL2 -lSDL2_image" />
 					<Add directory="C:/SDL2-2.0.14/x86_64-w64-mingw32/lib" />
 					<Add directory="C:/SDL2_image-2.0.5/x86_64-w64-mingw32/lib" />
