--- a/Release.cbp
+++ b/Release.cbp
@@ -2,27 +2,10 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="SDLRoguelike" />
+		<Option title="Release" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
-			<Target title="Debug">
-				<Option output="bin/Debug/SDLRoguelike" prefix_auto="1" extension_auto="1" />
-				<Option object_output="obj/Debug/" />
-				<Option type="1" />
-				<Option compiler="gcc" />
-				<Option use_console_runner="0" />
-				<Compiler>
-					<Add option="-g" />
-					<Add directory="C:/SDL2-2.0.14/x86_64-w64-mingw32/include/SDL2" />
-					<Add directory="C:/SDL2_image-2.0.5/x86_64-w64-mingw32/include/SDL2" />
-				</Compiler>
-				<Linker>
-					<Add option="-lmingw32 -lSDL2main -lSDL2 -lSDL2_image" />
-					<Add directory="C:/SDL2-2.0.14/x86_64-w64-mingw32/lib" />
-					<Add directory="C:/SDL2_image-2.0.5/x86_64-w64-mingw32/lib" />
-				</Linker>
-			</Target>
 			<Target title="Release">
 				<Option output="bin/Release/SDLRoguelike" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
