--- a/SDLRoguelike.cbp
+++ b/SDLRoguelike.cbp
@@ -9,6 +9,7 @@
 			<Target title="Debug">
 				<Option output="bin/Debug/SDLRoguelike" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
+				<Option external_deps="C:/SDLRoguelike/SDLRoguelike/include/game.h;" />
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Option use_console_runner="0" />
@@ -26,9 +27,8 @@
 			<Target title="Release">
 				<Option output="bin/Release/SDLRoguelike" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
-				<Option type="1" />
+				<Option type="0" />
 				<Option compiler="gcc" />
-				<Option use_console_runner="0" />
 				<Compiler>
 					<Add option="-O2" />
 					<Add directory="C:/SDL2-2.0.14/x86_64-w64-mingw32/include/SDL2" />
@@ -46,20 +46,19 @@
 			<Add option="-Wall" />
 			<Add directory="C:/SDL2-2.0.14/x86_64-w64-mingw32/include/SDL2" />
 			<Add directory="C:/SDL2_image-2.0.5/x86_64-w64-mingw32/include/SDL2" />
+			<Add directory="C:/SDLRoguelike/SDLRoguelike/include" />
 		</Compiler>
 		<Linker>
 			<Add option="-lmingw32 -lSDL2main -lSDL2 -lSDL2_image" />
 			<Add directory="C:/SDL2-2.0.14/x86_64-w64-mingw32/lib" />
 			<Add directory="C:/SDL2_image-2.0.5/x86_64-w64-mingw32/lib" />
 		</Linker>
-		<Unit filename="include/PerlinNoise.h" />
 		<Unit filename="include/game.h" />
 		<Unit filename="include/game_entity.h" />
 		<Unit filename="include/map.h" />
 		<Unit filename="include/mapgen.h" />
 		<Unit filename="include/player.h" />
 		<Unit filename="include/texture.h" />
-		<Unit filename="src/PerlinNoise.cpp" />
 		<Unit filename="src/game.cpp" />
 		<Unit filename="src/game_entity.cpp" />
 		<Unit filename="src/main.cpp" />
